fix borderwrap min height

--- a/maaya-oh/css/theme/main.css
+++ b/maaya-oh/css/theme/main.css
@@ -192,6 +192,7 @@
 	border: 1px solid #f0f0f0;
 	padding: 0px 15px 0px 15px;
 	margin:2px;
+	height:auto;
 	/*min-height:50vh;*/
 }
 
